2014-01-23  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_visual_map.php,
	include/styles/pandora.css: fixed the font sizes for the visualmaps
	embedmed into a dash
	
	Incident: #537 from local tacker.

2014-01-23  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_visual_map.php: fixed the links of icons in
	the visualconsole.

2014-01-23  Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/visual_console/render_view.php: re-added the countdown
	widget for visualmaps in fullscreen.
	
	Incident: #539 from local tacker.

2014-01-23  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/map_builder.php,
	godmode/reporting/visual_console_builder.data.php: fixed the access
	to user with operator read or and operator write in all group into
	the visualmaps.
	
	Incident: #538 from local tracker

2014-01-23  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/visual_console_builder.editor.js,
	include/functions_visual_map.php,
	include/ajax/visual_console_builder.ajax.php: fixes the bug for
	the simple values positions and the enable links in the static
	graph.
	
	Incidents: #536 and #535 from local tracker
2014-01-22  Sergio Martin <sergio.martin@artica.es>

	* include/functions_visual_map.php,
	include/styles/pandora.css: fixed the font sizes for the visualmaps
	embedmed into a dashboard.

2014-01-22  Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/alert_view.php: Add exception
	of field1 in recovery fields to the new alert view

	* include/functions_reporting.php
	mobile/operation/agents.php
	mobile/operation/tactical.php
	mobile/include/style/main.css: Improve tactical and
	agents view in mobile console

2014-01-22  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/reporting_builder.item_editor.php,
	include/constants.php, include/functions_reporting.php: added
	constants and killed magic numbers and unicorns.
	
	* include/functions_modules.php: added function